# platformufka

./: CMakeLists.txt
Sources/: EventQueue.h  GameObject.cpp  GameObject.h  IStateStackable.h  Input.h  Interpolation.h  Logic.cpp  Logic.h  State.cpp  State.h  main.cpp  main.h
Sources/GameObjects/: Circle.h  Enemy.h  EnemySpawner.h  Floor.h  GameBackground.h  Menu.h
